Fix CSS breaks on device width  above 800px

--- a/src/scss/subscribe.module.scss
+++ b/src/scss/subscribe.module.scss
@@ -45,6 +45,7 @@
   margin-bottom: 1rem;
   width: 50%;
   align-items: center;
+  padding: 2rem 0.25rem;
 
   input {
     flex-grow: 2;
@@ -93,11 +94,6 @@
     img {
       max-width: 200px;
       max-height: 300px;
-    }
-
-    .subscribe-inner {
-      width: 90%;
-      padding: 2rem 0.25rem;
     }
 
     .subscribe-input {
